# avr

./: .gitignore  README.md
Led/: AvrBuild.bat  Led.aps  Led.asm  Led.hex  Led.map  labels.tmp  led.aws
Meander/: AvrBuild.bat  Meander.aps  Meander.asm  Meander.hex  Meander.map  labels.tmp  meander.aws
Timer/: AvrBuild.bat  Makefile  Timer.aps  Timer.asm  Timer.hex  Timer.map  Timer1.hex  coreinit.inc  labels.tmp  macro.inc  timer.aws
_Шаблоны/: coreinit.inc  int328p.inc  macro.asm  macro.inc  каркас программы.asm  таблица прерываний.asm  чтение запись бита в порт.asm
blinkas/: blink.S
blinkas/samples/: Meander.asm  gcc.asm  list.asm  mlist.asm  tiny.asm
blinkc/: Makefile  blink.c
blinkgcc/: Changelog.txt  Makefile  blink.S  blink.c
ledas/: Makefile  blink.S
ledc/: Makefile  main.c
serial/src/: main.cpp
testAVR/: AvrBuild.bat  Clean.bat  labels.tmp  testAVR.aps  testAVR.asm  testAVR.hex  testAVR.map  testavr.aws
testas/: Makefile  main.S
testc/: Makefile  test.cpp
uart/: uart.aps  uart.asm  uart.aws
uart0/: AvrBuild.bat  labels.tmp  uart0.aps  uart0.asm  uart0.aws  uart0.hex  uart0.map
uart0c/: uart0c.aps  uart0c.apsx  uart0c.aws  uart0c.c  uart0c_1 — копия.c
uart0c/default/: Makefile  uart0c.elf  uart0c.hex  (+2 more)
uartc/: .gitignore  CMakeLists.txt  avr-toolchain.cmake  compile_commands.json  uartc.aps  uartc.aws  uartc.c
uartc/default/: Makefile  new.txt  uartc.elf  uartc.hex  uartc.id0  uartc.id1  uartc.lss  uartc.map  uartc.nam
uartc/default/dep/: uartc.o.d
uartc/examples/: Makefile  ycm_extra_conf2.py
uartc/src/: main.c
(+1 files in other folders)
